# nas-ansible

./: .ansible-lint  .gitignore  Dockerfile  README.md  ansible-requirements.yml  ansible.cfg  docker-compose.yml  example.secrets.yml  example.users.yml  exemple.inventory.yml  exporters_playbook.yml  nas_playbook.yml  pve_playbook.yml  pyproject.toml  server_setup.yml
.devcontainer/: devcontainer.json
dashboards_python/: containers_nas.py  node_nas.py
docs/: debuging.md  disks.md  disks_map.md  kvm.md  network.md  rsync.md  zfs.md
group_vars/: all.yml
inventories/example/: inventory.yml
inventories/example/group_vars/: all.yml  example.yml
playbooks/: nas.yml
roles/arr_stack/defaults/: main.yml
roles/arr_stack/tasks/: main.yml
roles/arr_stack/templates/: docker-compose.yml  traefik.yml
roles/automated_backups/tasks/: main.yml
roles/backup_containers/tasks/: main.yml
roles/backup_immich/defaults/: main.yml
roles/backup_immich/tasks/: main.yml
roles/backup_immich/templates/: backup-immich-restic-env.j2  backup-immich-restic.service  backup-immich-restic.service.j2  backup-immich-restic.timer.j2
roles/cadvisor/defaults/: main.yml
roles/cadvisor/tasks/: main.yml
roles/cadvisor/templates/: docker-compose.yml  traefik.yml
roles/cloudflare_ddns/defaults/: main.yml
roles/cloudflare_ddns/tasks/: main.yml
roles/cloudflare_ddns/templates/: docker-compose.yml
roles/cloudflared/defaults/: main.yml
roles/cloudflared/tasks/: main.yml
roles/cloudflared/templates/: docker-compose.yml
scripts/: generate_dashboards.sh
(+109 files in other folders)
