[tool.poetry]
name = "nas"
version = "0.1.0"
description = ""
authors = ["danielbibit <danielbibit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
