[tool.poetry]
name = "nas"
version = "0.1.0"
description = ""
authors = ["danielbibit <danielbibit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^11.0.0"
ansible-lint = "^25.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
