[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
managed = true
package = false

[project]
name = "nas"
version = "0.1.0"
description = ""
authors = [{ name = "danielbibit", email = "danielbibit@gmail.com" }]
requires-python = ">=3.12,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "ansible>=11.0.0,<12",
    "ansible-lint>=25.1.3,<26",
    "grafana-foundation-sdk==1743724444!11.5.0",
]

[dependency-groups]
dev = [
    "ansible-core>=2.18.12",
    "ansible-lint>=25.12.2",
]
